# python-trigger-engine

./: .gitignore  FFMPEG_SETUP.md  LICENSE  README.md  app.manifest.json  db.sqlite3  manage.py  pyproject.toml  requirements.txt  run.sh  setup_ffmpeg.py
_backup/: old_create_app.sh
application-source/: .coverage  .coveragerc  crontab.txt  manage.py  pyproject.toml  pytest.ini  requirements.txt
application-source/core/: __init__.py  admin.py  apps.py  constants.py  models.py  signals.py  tests.py  urls.py  utils.py  views.py
application-source/core/management/commands/: check_cookies.py  cleanup_media.py  send_daily_recall.py
application-source/core/migrations/: 0001_initial.py  0002_rename_transcript_reelinsight_transcript_english_and_more.py  0003_reelinsight_audio_drive_url_and_more.py  0004_remove_reelinsight_audio_drive_url_and_more.py  0005_reelinsight_audio_hash_and_more.py  0006_reelinsight_title.py  0007_reelinsight_source_id.py  0008_reelinsight_processed_at.py
application-source/core/services/: audio_extractor.py  audio_hash.py  cookie_health.py  email_error.py  email_new_reel.py  email_recall.py  email_utils.py  gemini_key_manager.py  gemini_transcriber.py  instagram_auth.py  post_gemini.py  post_text_aggregator.py  recall.py  reel_downloader.py  translator.py  trigger_extractor.py  trigger_gemini.py
application-source/core/templates/core/: index.html  login.html  passcode.html
application-source/core/templates/emails/: base.html  daily_recall.html  reel_processed.html
application-source/core/utils/: ffmpeg.py
application-source/tests/: conftest.py
application-source/tests/core/: test_constants.py  test_models.py  test_views.py
application-source/tests/core/management/: test_commands.py
application-source/tests/core/services/: test_audio_extractor.py  test_audio_hash.py  test_email_error.py  test_email_new_reel.py  test_email_recall.py  test_email_utils.py  test_gemini_key_manager.py  test_gemini_transcriber.py  test_post_gemini.py  test_post_text_aggregator.py  test_recall.py  test_reel_downloader.py
application-source/trigger_engine/: asgi.py  settings.py  wsgi.py
cmd/: _trigger_engine.bat  run.cmd
(+34 files in other folders)
