[tool.poetry]
name = "python-trigger-engine"
version = "0.1.0"
description = "A Python project"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "../README.md"
packages = [{ include = "core" }, { include = "trigger_engine" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
django = ">=6.0,<7.0"
google-genai = ">=0.1,<1.0"
gunicorn = ">=21.0,<23.0"
python-dotenv = ">=1.0,<2.0"
uvicorn = ">=0.22,<1.0"
deepgram-sdk = ">=2.0,<3.0"
instaloader = ">=4.14,<5.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "import-outside-toplevel",
    "unused-import",
    "no-member",
    "invalid-name",
    "self-assigning-variable",
]
