[tool.poetry]
name = "python-trigger-engine"
version = "0.1.0"
description = "A Python project"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "../README.md"
packages = [{ include = "core" }, { include = "trigger_engine" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
django = ">=6.0,<7.0"
google-genai = ">=0.1,<1.0"
gunicorn = ">=21.0,<23.0"
python-dotenv = ">=1.0,<2.0"
uvicorn = ">=0.22,<1.0"
deepgram-sdk = ">=2.0,<3.0"
instaloader = ">=4.14,<5.0"
curl-cffi = ">=0.7,<1.0"
parsel = ">=1.9,<2.0"
django-q2 = ">=1.6,<2.0"
yt-dlp = ">=2024.3.10"
requests = ">=2.31.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "import-outside-toplevel",
    "unused-import",
    "no-member",
    "invalid-name",
    "self-assigning-variable",
    "protected-access",
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "responses (>=0.26.0,<0.27.0)",
    "flake8 (>=7.3.0,<8.0.0)",
]

[tool.isort]
known_first_party = ["core", "trigger_engine"]

[tool.ruff.lint.isort]
known-first-party = ["core", "trigger_engine"]
